allow library user to control scoreboard using team names instead of match objects
Signed-off-by: Sebastian Syska <syska.seb@gmail.com>